# repository-django

./: README.md  pyproject.toml
mysite/: db.sqlite3
mysite/mysite/: settings.py  urls.py
mysite/polls/: models.py  urls.py  views.py
mysite/polls/migrations/: 0001_initial.py  0002_feedback.py  0003_delete_choice_delete_question.py
mysite/polls/static/polls/css/: index.css
mysite/polls/static/polls/js/: index.js
mysite/polls/templates/polls/: feedback.html  finances.html  index.html
